--- a/web/styles.css
+++ b/web/styles.css
@@ -7,9 +7,20 @@
     padding:0px;
     font-weight: bold;
 }
-a {
-    color:black;
-    text-decoration: none;
+/*a {*/
+    /*color:black;*/
+    /*text-decoration: none;*/
+/*}*/
+
+a:link,
+a:visited     {
+    color:#FF0000;
+    text-decoration:underline;
+}
+a:hover,
+a:active    {
+    color: #5cffeb;
+    text-decoration:none;
 }
 /*
 	ID选择器   以#开始  用来匹配元素的id值
@@ -107,3 +118,5 @@ a {
 #footer{
     background-color:#0033FF;
     height:80px;
+}
+
