--- a/web/styles.css
+++ b/web/styles.css
@@ -43,6 +43,7 @@ a:active    {
     margin:0px auto;
 }
 
+
 /*   #header  a:first-child   #header 里面所有是一个子元素的链接
 
 	#header > a:first-child  #header的直接子元素中的第一个a
@@ -116,7 +117,14 @@ a:active    {
 
 
 #footer{
-    background-color:#0033FF;
+    background-color:yellowgreen;
     height:80px;
 }
 
+#footer p{
+    color:red;
+    font-size:20px;
+    padding-top:40px;
+    width:800px;/*  通过设置margin的左右为auto可以实现居中，前提是被居中元素指定宽度*/
+    margin:0px auto;
+}
